# ecs

./: .gitignore  CMakeLists.txt  README.md  block.hpp  colony.hpp  component.hpp  detail.hpp  ecs.hpp  main.cpp  registry.hpp  types.hpp  view.cpp  view.hpp
detail/: block.hpp  colony.hpp  types.hpp
ecs/: ecs.hpp  registry.hpp  view.hpp
ecs/detail/: colony.hpp  types.hpp
test/: CMakeLists.txt  colony_test.cpp  ecs_test.cpp  test.cpp
